@@ -33,6 +33,8 @@ Changes to FleetUtils:
  - Added getNearbyFleets(CampaignFleetAPI fleet, float range,
    [boolean sortByDistance])
 Changes to MathUtils:
+ - Added getRandomPointInCone(Vector2f center, float radius, float minAngle,
+   float maxAngle), returns a random point in a two-dimensional cone.
  - Added getShortestRotation(float currAngle, float destAngle), returns the
    smallest difference between two angles. This can also be used to find the
    best turn direction
